--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@ server.port=8080
 #spring.datasource.url=jdbc:mysql://localhost:3306/wifarmdb
 #spring.datasource.username=assess
 #spring.datasource.password=pqW2ke%%4WPq
-spring.datasource.url=jdbc:mysql://novadb.mysql.database.azure.com/recondev?useSSL=true
-spring.datasource.username=novaadmin
-spring.datasource.password=Ten(100-90)*10
+#spring.datasource.url=jdbc:mysql://novadb.mysql.database.azure.com/recondev?useSSL=true
+#spring.datasource.username=novaadmin
+#spring.datasource.password=Ten(100-90)*10
+spring.datasource.url=jdbc:mysql://root:w8WZt5RCxWzodk0VgnEs@containers-us-west-190.railway.app:5486/railway
+spring.datasource.username=root
+spring.datasource.password=w8WZt5RCxWzodk0VgnEs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.proc.param_null_passing=true
