--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,24 @@ org.jobrunr.job-scheduler.enabled=true
 app.jwtSecret==n2r5u8x/A%D*G-KaPdSgVkYp3s6v9y$B&E(H+MbQeThWmZq4t7w!z%C*F-J@NcRf
 app.jwtExpirationInMs = 90000000
 
+spring.mail.host=mail.spearheadconsult.com
+spring.mail.username=evansa@demandinc.ng
+spring.mail.password=Integration@2020
+spring.mail.port=8025
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+
+sendGrid.api.key = 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
+
+logging.file.path=logs
+logging.file.name=application.log
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+logging.level.org.springframework.web=DEBUG
+
+#server.error.whitelabel.enabled=false
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=15MB
 
 spring.main.allow-circular-references = true
