Updated market crops

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,24 +27,24 @@ org.jobrunr.job-scheduler.enabled=true
 app.jwtSecret==n2r5u8x/A%D*G-KaPdSgVkYp3s6v9y$B&E(H+MbQeThWmZq4t7w!z%C*F-J@NcRf
 app.jwtExpirationInMs = 90000000
 
-#spring.mail.host=mail.spearheadconsult.com
-#spring.mail.username=evansa@demandinc.ng
-#spring.mail.password=Integration@2020
-#spring.mail.port=8025
-#spring.mail.properties.mail.smtp.starttls.enable=false
-#spring.mail.protocol=smtp
-#spring.mail.properties.mail.smtp.auth=true
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=wyfarhm@gmail.com
-spring.mail.password=Everbest_1
+spring.mail.host=mail.spearheadconsult.com
+spring.mail.username=evansa@demandinc.ng
+spring.mail.password=Integration@2020
+spring.mail.port=8025
+spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 
-#sendGrid.api.key = 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
-sendGrid.api.key = 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
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=wyfarhm@gmail.com
+#spring.mail.password=Everbest_1
+#spring.mail.protocol=smtp
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+sendGrid.api.key = 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
+#sendGrid.api.key = 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
 
 logging.file.path=logs
 logging.file.name=application.log
