--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.proc.param_null_passing=true
 spring.sql.init.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql = true
