--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/famsfood_db
-spring.datasource.username=root
-spring.datasource.password=Everbest_1
-#spring.datasource.url=jdbc:mysql://root:i1CD0VaDEHLzSP2Pruk0@containers-us-west-136.railway.app:7077/railway
+#spring.datasource.url=jdbc:mysql://localhost:3306/famsfood_db
 #spring.datasource.username=root
-#spring.datasource.password=i1CD0VaDEHLzSP2Pruk0
+#spring.datasource.password=Everbest_1
+spring.datasource.url=jdbc:mysql://root:i1CD0VaDEHLzSP2Pruk0@containers-us-west-136.railway.app:7077/railway
+spring.datasource.username=root
+spring.datasource.password=i1CD0VaDEHLzSP2Pruk0
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.proc.param_null_passing=true
